--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -52,6 +52,12 @@
                                                 <div class="form-group">
                                                     <label for="lastname" class="col-form-label">Last Name</label>
                                                     <input id="lastname" type="text" placeholder="last name" th:field="*{lastName}" class="form-control">
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('lastName')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('lastName')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -61,6 +67,12 @@
                                                 <div class="form-group">
                                                     <label for="emailaddress" class="col-form-label">Email Address</label>
                                                     <input id="emailaddress" type="text" placeholder="email address" th:field="*{userName}" class="form-control">
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('userName')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('userName')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
 
@@ -68,6 +80,12 @@
                                                 <div class="form-group">
                                                     <label for="phonenumber" class="col-form-label">Phone Number</label>
                                                     <input id="phonenumber" type="tel" placeholder="phone number" th:field="*{phone}" class="form-control">
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('phone')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('phone')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -77,6 +95,12 @@
                                                 <div class="form-group">
                                                     <label for="password" class="col-form-label">Password</label>
                                                     <input id="password" type="password" placeholder="password" th:field="*{passWord}" class="form-control">
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('passWord')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('passWord')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
 
@@ -84,6 +108,12 @@
                                                 <div class="form-group">
                                                     <label for="repassword" class="col-form-label">Confirm Password</label>
                                                     <input id="repassword" type="password" placeholder="confirm your password" th:field="*{passWord}"  class="form-control">
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('confirmPassWord')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('confirmPassWord')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -99,6 +129,12 @@
                                                     <label class="custom-control custom-radio custom-control-inline">
                                                         <input type="radio" name="radio-inline" th:value="FEMALE" th:field="*{gender}" class="custom-control-input"><span class="custom-control-label">Female</span>
                                                     </label>
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('gender')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('gender')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
 
                                                 </div>
                                             </div>
@@ -107,10 +143,16 @@
                                                 <div class="form-group">
                                                     <label>Choose a Role</label>
                                                     <select th:field="*{role}" name="role" class="custom-select">
-                                                        <option th:value="''" th:text="Select"></option> <!-- just show -->
+                                                        <option th:value="''" th:text="Select"></option>  <!-- value is empty String ,just show -->
                                                         <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.description}"></option>
                                                                                                   <!-- Html show it as a String "2" -->
                                                     </select>
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('role')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('role')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
