--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -26,19 +26,24 @@
 
                             <section class="panel panel-transparent">
                                 <header class="panel-heading">
-                                    <h2 class="panel-title">User Create</h2>
+                                    <h2 class="panel-title">User Update</h2>
                                 </header>
 
                                 <div class="panel-body">
 
                                     <!-- ------------------------FORM START----------------------------- -->
-                                    <!-- end point for post-->
                                     <form th:action="@{/user/update}" method="post" th:object="${user}">
                                         <div class="row">
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="firstname" class="col-form-label">First Name</label>
                                                     <input id="firstname" type="text" placeholder="first name" th:field="*{firstName}" class="form-control">
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('firstName')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('firstName')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
 
@@ -46,6 +51,12 @@
                                                 <div class="form-group">
                                                     <label for="lastname" class="col-form-label">Last Name</label>
                                                     <input id="lastname" type="text" placeholder="last name" th:field="*{lastName}" class="form-control">
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('lastName')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('lastName')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -55,6 +66,12 @@
                                                 <div class="form-group">
                                                     <label for="emailaddress" class="col-form-label">Email Address</label>
                                                     <input id="emailaddress" type="text" placeholder="email address" th:field="*{userName}" class="form-control">
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('userName')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('userName')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
 
@@ -62,6 +79,12 @@
                                                 <div class="form-group">
                                                     <label for="phonenumber" class="col-form-label">Phone Number</label>
                                                     <input id="phonenumber" type="tel" placeholder="phone number" th:field="*{phone}" class="form-control">
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('phone')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('phone')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -71,13 +94,25 @@
                                                 <div class="form-group">
                                                     <label for="password" class="col-form-label">Password</label>
                                                     <input id="password" type="password" placeholder="password" th:field="*{passWord}" class="form-control">
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('passWord')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('passWord')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
 
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
                                                     <label for="repassword" class="col-form-label">Confirm Password</label>
-                                                    <input id="repassword" type="password" placeholder="confirm your password" th:field="*{passWord}"  class="form-control">
+                                                    <input id="repassword" type="password" placeholder="confirm your password" th:field="*{confirmPassWord}"  class="form-control">
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('confirmPassWord')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('confirmPassWord')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -88,12 +123,16 @@
                                                     <label>Gender</label><br>
                                                     <label class="custom-control custom-radio custom-control-inline">
                                                         <input type="radio" name="radio-inline" th:value="MALE" th:field="*{gender}" class="custom-control-input"><span class="custom-control-label">Male</span>
-                                                        <!-- th:value should be whatever Gender Constant ex:MALE;FEMALE, not Male -->
                                                     </label>
                                                     <label class="custom-control custom-radio custom-control-inline">
                                                         <input type="radio" name="radio-inline" th:value="FEMALE" th:field="*{gender}" class="custom-control-input"><span class="custom-control-label">Female</span>
                                                     </label>
-
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('gender')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('gender')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
 
@@ -101,10 +140,15 @@
                                                 <div class="form-group">
                                                     <label>Choose a Role</label>
                                                     <select th:field="*{role}" name="role" class="custom-select">
-                                                       <!-- <option th:value="''" th:text="Select"></option>  -->  <!-- no needed bcs it has to show what is the selected from update button -->
+                                                        <!--                                                        <option th:value="''" th:text="Select"></option>-->
                                                         <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.description}"></option>
-                                                        <!-- Html show it as a String "2" -->
                                                     </select>
+                                                    <div class="invalid-feedback" th:if="${#fields.hasErrors('role')}">
+                                                        <ul>
+                                                            <li th:each="err : ${#fields.errors('role')}"
+                                                                th:text="${err}"></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -157,12 +201,12 @@
 
                                             <tbody>
 
-                                            <tr th:each="theUser : ${users}">  <!-- userList -->
-                                                <td th:text="${theUser.firstName + ' ' + theUser.lastName}"></td>
-                                                <td th:text="${theUser.userName}"></td>
-                                                <td th:text="${theUser.gender.value}"></td>
-                                                <td th:text="${theUser.phone}"></td>
-                                                <td th:text="${theUser.role.description}"></td>
+                                            <tr th:each="user: ${users}">
+                                                <td th:text="${user.firstName + ' ' + user.lastName}"></td>
+                                                <td th:text="${user.userName}"></td>
+                                                <td th:text="${user.gender.value}"></td>
+                                                <td th:text="${user.phone}"></td>
+                                                <td th:text="${user.role.description}"></td>
                                                 <td class="actions">
                                                     <a href="#"><button type="button" class="btn btn-warning btn-sm">Update</button></a>
                                                     <a href="#" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button></a>
